fix: symbol rack misalignment

--- a/data/style.css
+++ b/data/style.css
@@ -467,6 +467,7 @@ li button {
 .symbolButtons-wrapper {
   width: 264px;
   overflow: hidden;
+  margin: auto;
 }
 
 #symbolButtons * {
